更新垃圾回收及CMS，G1垃圾回收算法的笔记。