@@ -416,9 +416,13 @@ JNI指针：本地方法，比如C++方法运行运用到了本地的对象
 
 PN以响应时间优先，PS吞吐量优先。
 
-4，G1
+4，G1，只有逻辑分代，没有物理分代了。Java1.9后的默认垃圾回收器，吞吐量比CMS低15%左右。
 
 5，ZGC
+
+#### Card table
+
+由于在YGC时，需要扫描整个OLD区，效率太低，所以JVM设计了card table，将old区分成一个一个card，如果一个old区card中有对象指向Y区，将它设为dirty，下次扫描时，只需要扫描dirty的就行了，在结构上，Card Table用BitMap来实现。
 
 ### CMS(Concorrent mark sweep)
 
@@ -426,12 +430,162 @@ CMS是一个里程碑式的东西，在它之前，所有的垃圾回收器在�
 
 #### CMS四个阶段
 
-1，初始标记
+1. 初始标记
 
-2，并发标记
+   标记出根对象，时间短，STW
 
-3，重新标记
+2. 并发标记
 
-4，并发清除
+   最耗时的一个阶段，不会产生STW，从根对象往下继续找
+
+3. 重新标记
+
+   在并发标记后，产生变化的一些对象（由不是垃圾变成垃圾，这个好像不太可能，由垃圾变成不是垃圾），这阶段也是STW的。
+
+4. 并发清除
 
 #### CMS缺点
+
+1. FGC会用Serial old来工作，效率无法忍受
+2. 浮动垃圾
+
+### G1(Garbage First)
+
+#### 特点
+
+1. 并发收集
+2. 适用不需要实现很高的吞吐量的场景
+3. 新老年代的比例不是固定的（5%-60%），不用手动指定，也不要手动指定，G1以停顿时间的基准，会动态调整，如果设置期望停顿时间为200ms，G1会朝着这个方向努力。
+
+#### 基本概念
+
+1. CSet（Connection Set）记录哪些Region是可以回收的，等执行回收时，直接从CSet里查找。
+2. RSet（Remembered Set）在每个Region中有一个Hash表，记录有哪些其他Region指向当前Region（详细到具体对象级别），浪费了更多的空间，但是是G1高效的关键。
+3. MixedGC（=CMS）YGC不行了，对象产生特别多到45%，默认启动MixedGC，MixedGC相当于一套完整的CMS
+
+#### FGC
+
+G1，CMS的调优目标都是尽量别有FGC，如果有，需要：
+
+1. 扩内存
+2. 提升CPU
+3. 降低MixedGC触发的阈值，让MixedGC提早发生。
+
+#### 三色标记法
+
+1. 白色：未被标记的对象
+2. 灰色：自身被标记，成员变量还没有标记
+3. 黑色：自身和成员变量都已经完成标记
+4. 漏标，本来是live object，由于没有遍历到，被当作垃圾回收了。两个条件：
+   1. 黑色A指向了白色D
+   2. 同时原来指向这个白色D的灰色B，不再指向白色D了
+   3. 黑色A已经标记完了，不会再重新标记了，灰色B不再指向了这个白色D，也不会再标记了，就会产生漏标。
+   4. 解决方案：
+      1. 黑色A指向了白色D，将黑色A变成灰色A，incremental update，下次会重新扫描这块灰色指向的对象（CMS用的）。
+      2. SATB snapshot at the beginning，关注引用的删除。当灰色B指向黑色D的引用消失时，要把这个引用推到GC的堆栈，保证白色D还能被GC扫描到。(G1使用的是SATB，效率会比方案1高，完美配合RSet)
+
+### 调优
+
+#### 基础概念
+
+##### 吞吐量
+
+用户代码执行时间 / （用户代码执行时间 + 垃圾回收时间）。吞吐量越大，代表用户代码执行时间越多，适合科学计算，数据挖掘等，垃圾回收器可以用PS+PO。
+
+##### 响应时间
+
+STW时间越短，响应时间越好，适合网站，带界面的程序等，垃圾回收器可以选PN+CMS，1.8以后可以选择G1。
+
+#### 调优分类
+
+1，根据需求进行JVM规划和预调优
+
+2，优化运行JVM运行环境
+
+3，解决JVM运行过程中出现的各种问题
+
+#### 预调优
+
+1， 熟悉业务场景，选择合适的垃圾回收器，吞吐量优先，还是响应时间优先。
+
+2，计算内存需求，没有严格界定，需压测。
+
+3，选定CPU，越强越好。
+
+4，设定年代大小，升级年龄。
+
+5，设定日志参数，一般采用循环覆盖方式，日志个数5个，每个大小20M等。
+
+```bash
+-xloggc:/opt/xxx/logs/xxx-xxx-gc-%t.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=20M -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCCause
+```
+
+#### 常见问题
+
+##### 系统CPU经常100%，如何调优：
+
+1. 找出哪个进程CPU高（top），获得它的PID，它占比比较高。
+2. 该进程中的哪个线程CPU高（top -Hp PID），获得这个进种里哪个线程的CPU占比高。
+3. jps定位具体java进程，jstack定位线程状况。
+4. jinfo pid
+5. jmap - histo 4655 | head -20 查找有多少对象产生，对象最多的20个类
+6. 导出Dump文件：
+   1. -XX:+HeapDmpOnOutOfMemoryError，在OOM的时候，会导出dump文件的。
+   2. jmap导dump文件，jmap -dump:format=b,file=xxx pid :，这种情况会给系统造成很大影响，线上系统不合适。
+7. 图形化界面：图形化界面同样会影响系统的运行效率。
+   1. jconsole
+   2. jvisualvm
+8. dump文件分析
+   1. jhat
+   2. jvisualvm导入dump。
+
+#### 案例
+
+1. 硬件升级系统反而卡顿
+
+   需要使用PN+CMS代替PS+PO，或者使用G1
+
+2. 线程池不当运用产生OOM问题
+
+   
+
+3. （真实案例）系统卡顿但是勉强能用，OOM后重启解决。（很多系统定期重启维护，游戏服务器正在维护，12306夜间不能买票等等）
+
+   查看GC log，系统频繁GC，无法查明原因，扩大内存，更换垃圾回收器为G1.
+
+4. tomcat http-header-size
+
+   ```yaml
+   server.port=9898
+   server.max-http-header-sie=1000000000
+   ```
+
+   每个请求过来都会占用这么大内在，请求过多，很容易OOM。Http11outputBuffer对象特别多，占用内存特别大。
+
+5. Lambda表达式导致方法区内存溢出问题
+
+   lambda表达式，不断地往方法区里面装class，class会被放到方法区。
+
+   ```md
+   Caused by： java.lang.OutOfMemoryError: Compressed class space.
+   ```
+
+6. 直接内存溢出问题
+
+7. 栈溢出问题
+
+   -Xss设定太小，用一个方法不停调用另外一个方法，就能造成栈溢出。
+
+8. 重写finalize引发频繁GC
+
+   C++程序员手动回收内存（构造函数new一个对象，析构函数delete一个对象）
+
+   finalize耗时比较长
+
+9. 如果有一个系统，内存一直消耗不超过10%，但是GC日志里FGC频繁产生
+
+   有人显示调用了<code>System.gc()</code>,生产环境中一般会设置禁用。
+
+   
+
+   
